--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import '~bootstrap/scss/_buttons';
 @import '~bootstrap/scss/_nav';
 @import '~bootstrap/scss/_navbar';
+@import '~bootstrap/scss/_card';
 
 @import 'theme.minty';
 
